# dynamic-circle-rl-alignment

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  train.py
config/: train_config.yaml
evaluate/: compare_weights.py  evaluate.py  plot_stats.py  xai_explain.py
model/: base_model.py
rl/: circle_env.py  rl_finetune.py
